--- a/css/styles.css
+++ b/css/styles.css
@@ -28,19 +28,18 @@ body {
 
 header {
   display: flex;
+  position: fixed;
+  top: 0;
 }
 
 .title-and-logo-container {
-  position: fixed;
-  top: 0;
   display: flex;
   flex-direction: row-reverse;
   z-index: 1;
+  padding-left: 3rem;
 }
 
 .titles-div {
-  position: fixed;
-  top: 0;
   display: flex;
   flex-direction: column;
   z-index: 1;
@@ -85,6 +84,7 @@ nav li > a:visited {
 
 nav {
   position: fixed;
+  top: 0;
   width: 100%;
   top: 0;
 }
@@ -94,6 +94,7 @@ nav {
   justify-content: flex-end;
   gap: 2rem;
   list-style: none;
+  padding-right: 3rem;
 }
 
 .nav-item {
