--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@ to do/ask: why i habe a separation from html document: margin 0 to body!!
 body {
   background-color: var(--background-color);
   font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  top: 8rem;
   width: 100%;
   margin: 0;
 }
@@ -48,38 +50,57 @@ header {
     ); */
   width: 100%;
   height: 8rem;
+  justify-content: space-between;
+  gap: 5rem;
+  padding-top: 1rem;
 }
 
 .title-and-logo-container {
   display: flex;
   flex-direction: row-reverse;
+  justify-content: flex-end;
+  gap: 1rem;
   z-index: 1;
+  border: 2px solid green;
+  width: 100%;
 }
 
 .titles-div {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   z-index: 1;
-  gap: 3px;
+  gap: 1rem;
+  border: 2px solid violet;
 }
 
 .title,
 .subtitle {
-  font-size: 16px;
   color: var(--links-color);
-  margin-top: 0;
-  margin-bottom: 0;
+}
+
+.title {
+  flex-shrink: 0;
+  font-size: 17px;
   font-weight: 70;
+}
+
+.subtitle {
+  font-size: 12px;
+  font-weight: 50;
+  padding-top: 0.35rem;
+}
+
+.logo {
+  margin-top: 0;
+  border: 2px solid black;
+  height: 3rem;
 }
 
 /* Navigation Styles */
 
 nav {
-  position: fixed;
-  top: 0;
+  border: 2px solid red;
   width: 100%;
-  top: 0;
-  height: 6rem;
 }
 
 nav li > a {
