--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,6 @@ to do/ask: why i habe a separation from html document: margin 0 to body!!
 body {
   background-color: var(--background-color);
   font-family: Arial, Helvetica, sans-serif;
-  position: relative;
-  top: 8rem;
   width: 100%;
   margin: 0;
 }
@@ -31,6 +29,7 @@ header {
   display: flex;
   position: fixed;
   top: 0;
+  z-index: 10;
   /* if body is var(--background-color: (yellow))*/
   background: rgb(12, 34, 51);
   background: linear-gradient(
@@ -128,4 +127,9 @@ nav li > a:visited {
   text-decoration: none;
 }
 
-/* Body Styles */
+/* Body Styles <main></main>*/
+
+main {
+  position: absolute;
+  top: 8rem;
+}
