--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ h4::before {
   display: flex;
   flex-direction: column;
   border: 2px solid red;
-  width: ;
+  width: 100%;
 }
 
 .bio-description {
