Remove the healping color borders

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,18 +170,23 @@ h4::before {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid red;
   width: 50%;
 }
 
 .bio-description {
-  padding-top: 1rem;
   max-width: 255px;
+  padding-bottom: 0;
 }
 
 .bio-logo-top,
 .bio-logo-bottom {
   height: 4rem;
+  padding: 0;
+}
+
+.bio-logo-bottom {
+  position: relative;
+  top: -1.7rem;
 }
 
 /* --Styles bio-career */
@@ -189,7 +194,6 @@ h4::before {
   display: flex;
   flex-direction: column;
   max-width: 50%;
-  border: 2px solid blue;
 }
 
 .certification-link {
